--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
 
   /* color-scheme: dark; */
   color: rgba(255, 255, 255, 0.87);
-  background-color: #1F2544;
+  background-color: #151515;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
